new logo, fonts, text highlights

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,3 +1,63 @@
 img + span > .icon.outbound {
   display: none;
 }
+
+body {
+  font-family: 'Raleway';
+  font-weight: normal;
+}
+
+strong {
+  font-weight: 550;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'IstokWeb';
+  font-weight: normal;
+}
+
+.custom-block.tip {
+  border-color: #38cdd5;
+  background-color: #f7f7f3;
+  color: $textColor;
+
+  .custom-block-title {
+    color: $textColor;
+  }
+}
+
+.custom-block.warning {
+  border-color: #f1f440;
+  background-color: #f7f7f3;
+  color: $textColor;
+
+  .custom-block-title {
+    color: $textColor;
+  }
+}
+
+.custom-block.danger {
+  border-color: #f6886f;
+  background-color: #f7f7f3;
+  color: $textColor;
+
+  .custom-block-title {
+    color: $textColor;
+  }
+}
+
+span.badge {
+  font-family: 'Raleway';
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: url(/fonts/Raleway-VariableFont_wght.ttf);
+}
+
+@font-face {
+  font-family: 'IstokWeb';
+  src: url(/fonts/IstokWeb-Regular.ttf);
+  font-weight: normal;
+}
