site: top section

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -17,8 +17,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .custom-block.tip {
-  border-color: #38cdd5;
-  background-color: #f7f7f3;
+  border-color: $tipColor;
+  background-color: $attentionBoxColor;
   color: $textColor;
 
   .custom-block-title {
@@ -27,8 +27,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .custom-block.warning {
-  border-color: #f1f440;
-  background-color: #f7f7f3;
+  border-color: $warningColor;
+  background-color: $attentionBoxColor;
   color: $textColor;
 
   .custom-block-title {
@@ -37,8 +37,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .custom-block.danger {
-  border-color: #f6886f;
-  background-color: #f7f7f3;
+  border-color: $dangerColor;
+  background-color: $attentionBoxColor;
   color: $textColor;
 
   .custom-block-title {
