--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,8 +1,17 @@
-$accentColor = #23c8d2
+$ajvBlueColor = #409cff
+$ajvGreenColor = #23c8d2
+$ajvRedColor = #f5775b
+
+$tipColor = $ajvGreenColor
+$warningColor = #f1f440
+$dangerColor = $ajvRedColor
+$attentionBoxColor = #f7f7f3
+
+$accentColor = $ajvGreenColor
 $textColor = #292828
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
-$badgeTipColor = #23c8d2
+$badgeTipColor = $ajvGreenColor
 $badgeWarningColor = darken(#ffe564, 35%)
-$badgeErrorColor = #f5775b
+$badgeErrorColor = $ajvRedColor
