site: different green colour

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,5 +1,5 @@
 $ajvBlueColor = #409cff
-$ajvGreenColor = #23c8d2
+$ajvGreenColor = #1fdca3
 $ajvRedColor = #f5775b
 
 $tipColor = $ajvGreenColor
@@ -7,7 +7,7 @@ $warningColor = #f1f440
 $dangerColor = $ajvRedColor
 $attentionBoxColor = #f7f7f3
 
-$accentColor = $ajvGreenColor
+$accentColor = darken($ajvGreenColor, 15%)
 $textColor = #292828
 $borderColor = #eaecef
 $codeBgColor = #282c34
