site: sidebar styles

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -51,6 +51,21 @@ span.badge {
   font-weight: 500;
 }
 
+.navbar span.site-name {
+  font-family: IstokWeb;
+  font-weight: 500;
+  font-size: 1.6em;
+}
+
+p.sidebar-heading {
+  font-weight: 500;
+  font-size: 1em;
+}
+
+a.sidebar-link.active {
+  font-weight: 500!important;
+}
+
 @font-face {
   font-family: 'Raleway';
   src: url(/fonts/Raleway-VariableFont_wght.ttf);
