site: responsive top section

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -15,3 +15,5 @@ $arrowBgColor = #ccc
 $badgeTipColor = $ajvGreenColor
 $badgeWarningColor = darken(#ffe564, 35%)
 $badgeErrorColor = $ajvRedColor
+
+$MQMobileNarrow = 480px
