--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -51,6 +51,14 @@ span.badge {
   font-weight: 500;
 }
 
+.token.string {
+  color: $accentCode;
+}
+
+button.theme-code-group__nav-tab.theme-code-group__nav-tab-active {
+  border-color: $accentCode;
+}
+
 .navbar span.site-name {
   font-family: IstokWeb;
   font-weight: 500;
