--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,5 +1,5 @@
 $ajvBlueColor = #409cff
-$ajvGreenColor = #1fdca3
+$ajvGreenColor = #23c8d2 // #1fdca3
 $ajvRedColor = #f5775b
 
 $tipColor = $ajvGreenColor
@@ -7,13 +7,14 @@ $warningColor = #f1f440
 $dangerColor = $ajvRedColor
 $attentionBoxColor = #f7f7f3
 
-$accentColor = darken($ajvGreenColor, 15%)
+$accentColor = #07aab4 // darken($ajvGreenColor, 15%)
+$accentCode = #7ec699
 $textColor = #292828
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
 $badgeTipColor = $ajvGreenColor
-$badgeWarningColor = darken(#ffe564, 35%)
+$badgeWarningColor = #e9c400
 $badgeErrorColor = $ajvRedColor
 
 $MQMobileNarrow = 480px
