site: move content from the main readme

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -51,11 +51,11 @@ span.badge {
   font-weight: 500;
 }
 
-.token.string {
+.theme-code-group .token.string {
   color: $accentCode;
 }
 
-button.theme-code-group__nav-tab.theme-code-group__nav-tab-active {
+.theme-code-group button.theme-code-group__nav-tab.theme-code-group__nav-tab-active {
   border-color: $accentCode;
 }
 
