site: hide navbar on mobile

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -46,6 +46,10 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.sidebar nav.nav-links div.nav-item {
+  display: none;
+}
+
 span.badge {
   font-family: 'Raleway';
   font-weight: 500;
